fixed flickering issue in drop shadow

--- a/src/pages/home/home-page.styles.scss
+++ b/src/pages/home/home-page.styles.scss
@@ -160,8 +160,8 @@
         .home__body__brand__logo {
           width: 100%;
           height: 100%;
-          -webkit-filter: drop-shadow(0px 0px 15px rgba(246, 67, 82, 0.5));
-          filter: drop-shadow(0px 0px 15px rgba(246, 67, 82, 0.5));
+          // -webkit-filter: drop-shadow(0px 0px 15px rgba(246, 67, 82, 0.5));
+          // filter: drop-shadow(0px 0px 15px rgba(246, 67, 82, 0.5));
         }
       }
     }
